--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "body-scroll-lock": "^4.0.0-beta.0",
     "classcat": "^5.0.4",
     "classnames": "^2.3.2",
+    "contentful": "^10.1.0",
     "framer-motion": "^7.6.5",
     "js-cookie": "^3.0.1",
     "lodash": "^4.17.21",
