big update, pushing settled website design

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "ChawkBazar E-Commerce Template",
-  "short_name": "ChawkBazar",
+  "name": "The Official Real Peeps E-Commerce Store",
+  "short_name": "RealPeeps",
   "theme_color": "#ffffff",
   "background_color": "#004740",
   "display": "fullscreen",
