--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fontsource/open-sans": "^4.5.13",
     "@fontsource/satisfy": "^4.5.6",
+    "@getbrevo/brevo": "^2.0.0-beta.4",
     "@headlessui/react": "^1.7.4",
     "@reach/portal": "^0.18.0",
     "@tailwindcss/forms": "^0.5.3",
